src/tests/testfiles/variable-declarations/4.txt
Error at 3:9: Variable initialization must have the same type (have float and int)
float a = 8;
      ^
